compiler/tests-spec/testData/psi/templates/identifiers/enumEntry.kt
enum class A(x1: Any?) {
    <!ELEMENT!>("1"),
    <!ELEMENT!>("2");
}
